proj1/tests/correct/assign_int.py
# Integer assignment
a = 3

print a