proj1/tests/error/for_not_iterable.py
for a in 3:
    print a
